--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
     "emailjs": "^4.0.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-on-screen": "^2.1.1",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
